--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi voluptatibus id, ea veritatis repudiandae quibusdam libero impedit fuga! Explicabo, porro obcaecati! Totam molestias assumenda dolore quasi doloremque eum eveniet.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione enim quam doloremque quis facilis ipsa cum eaque, explicabo alias, saepe soluta voluptate expedita suscipit eos reiciendis magnam delectus fugiat animi.</p>
         </article>
     </main>
 </body>
