--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi voluptatibus id, ea veritatis repudiandae quibusdam libero impedit fuga! Explicabo, porro obcaecati! Totam molestias assumenda dolore quasi doloremque eum eveniet.</p>
+            <p><a href="">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione enim quam doloremque quis facilis ipsa cum eaque, explicabo alias, saepe soluta voluptate expedita suscipit eos reiciendis magnam delectus fugiat animi.</p>
+            <p><a href="">Acesse o Curso de JavaScript</a></p>
         </article>
     </main>
 </body>
